2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiStack.c: Add missing includes.
	(tuiShowFrameInfo): Don't crash when there is no symbol table 
	associated with the pc.
	* tuiSource.c (_hasBreak): Check for null source file.
	* tuiWin.c (tuiRefreshAll): Check for null winList[type].
	(_tuiSetFocus): Check for null dataWin.
	* tuiGeneralWin.c (refreshAll): Check for null list[type].

2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiDisassem.c (tuiSetDisassemContent): Use tm_print_insn_info
	to disassemble in the curses window.
	
2001-07-16  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tui.h: Cleanup to avoid inclusion of curses includes.
	(TuiGenWinInfo, TuiGenWinInfoPtr): Move from here.
	* tuiData.h: To here; include curses includes here.
	(setTermHeightTo): Rename of setTermHeight to follow reality.
	(setTermWidthTo): Likewise with setTermWidth.

2001-07-14  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiWin.c, tui.c, tuiCommand.c: Use ansi prototype.
	tuiIO.c, tuiData.c: Likewise.
	tuiDataWin.c, tuiDisassem.c: Likewise.
	tuiGeneralWin.c, tuiLayout.c: Likewise.
	tuiRegs.c, tuiSource.c: Likewise.
	tuiSouceWin.c, tuiStack.c: Likewise.

2001-07-14  Stephane Carrez  <Stephane.Carrez@worldnet.fr>

	* tuiWin.c, tuiWin.h, tui.c, tui.h, tuiCommand.c: Add FSF copyright.
	tuiCommand.h, tuiIO.c, tuiIO.h, tuiData.h, tuiData.c: Likewise.
	tuiDataWin.c, tuiDataWin.h, tuiDisassem.c, tuiDisassem.h: Likewise.
	tuiGeneralWin.c, tuiGeneralWin.h, tuiLayout.c, tuiLayout.h: Likewise.
	tuiRegs.c, tuiRegs.h, tuiSource.c, tuiSource.h: Likewise.
	tuiSouceWin.c, tuiSourceWin.h, tuiStack.c, tuiStack.h: Likewise.

2001-03-08  Andrew Cagney  <ac131313@redhat.com>

	* tuiRegs.c: Use NUM_REGS, not ARCH_NUM_REGS.

2001-03-06  Kevin Buettner  <kevinb@redhat.com>

	* tui-file.h: Update/correct copyright notice.

Wed Feb  7 19:54:27 2001  Andrew Cagney  <cagney@redhat.com>

	* tui-file.c: Add __FILE__ and __LINE__ parameter to calls to